--- a/templates/index.html
+++ b/templates/index.html
@@ -6,18 +6,23 @@
     <title>Package Info Validator</title>
 
     <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="{{ url_for('static', path='tailwind.js') }}"></script>
+    <style>
+        html, body {
+            -webkit-transform: translate3d(0, 0, 0);
+        }
+    </style>    
 
 </head>
 <body class="pywebview-drag-region bg-gray-100 flex items-center justify-center min-h-screen">
-    <!-- Close Button 
-    <button onclick="closePage()" 
+    <!-- Close Button  -->
+    <!-- <button onclick="closePage()" 
         class="absolute top-4 right-4 bg-red-500 text-white px-3 py-1 rounded-full shadow-lg hover:bg-red-600 transition">
         ❌ Close
     </button>  -->
     <div class="w-full max-w-5xl bg-white shadow-lg rounded-xl p-6 relative">
       
-        <h1 class="text-2xl font-semibold text-gray-700 text-center mb-4">📂 Drag & Drop File Upload</h1>
+        <h1 class="text-2xl font-semibold text-gray-700 text-center mb-4">📂 Upload Package Info YAML File</h1>
 
         <!-- Drop Zone -->
         <div id="drop-zone" 
